log/build_2024-04-01_07-00-00/TemperaturePythonPackage/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/abolfazlmohammadpour/Temperature/ROS2WorkSpace/install/TemperaturePythonPackage/lib/python3.10/site-packages/TemperaturePythonPackage/TemperaturePythonNode.py", line 6
    def PrintHelloToOutput()
                            ^
SyntaxError: expected ':'

